# MultiSendr

./: AVAIL_INTEGRATION.md  README.md  contract-config.json  hardhat.config.ts  package-avail.json  package-contracts.json  package-lock.json  package.json
app/: globals.css  page.tsx
app/components/: BatchSection.tsx  ConnectWallet.tsx  WalletConnectSection.tsx
contracts/: StableCoinSwapContract.sol  SwapContract.sol  SwapContractDeployer.sol
contracts/stablecoin_swap/: Cargo.toml  lib.rs
scripts/: deploy-avail.js  deploy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/exchange-rate/: route.ts
src/app/api/token-balance/: route.ts
src/app/swap/: page.tsx
src/components/: AvailIntegrationTest.tsx  BatchSection.tsx  ConnectWallet.tsx  HeroSection.tsx  RecentTransactions.tsx  SuccessAnimation.tsx  SwapSection.tsx  TestnetFaucet.tsx  TransactionNotification.tsx  WalletConnectSection.tsx
src/components/herosection/: FeaturesSection.tsx  HeaderSection.tsx  MainContentSection.tsx
src/components/swap/: BatchSummary.tsx  BatchSwapInterface.tsx  SwapPair.tsx  TokenSelector.tsx
src/components/ui/: Button.tsx
src/contexts/: TransactionContext.tsx  WalletContext.tsx
src/hooks/: useAvailWallet.ts  useTransactionStatus.ts
src/services/: availService.ts  swapContractService.ts
